Settings added. Now the development settings will be ignored

--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /src/VeganBigBrother.API/appsettings.Local.json
+/src/VeganBigBrother.API/appsettings.Development.json
