main settings file edited

--- a/src/VeganBigBrother.API/appsettings.json
+++ b/src/VeganBigBrother.API/appsettings.json
@@ -11,5 +11,13 @@
     "User": "",
     "Password": ""
   },
+  "Authentication": {
+    "Secret": "",
+    "Issuer": ""
+  },
+  "Mailing": {
+    "email": "",
+    "password": ""
+  },
   "AllowedHosts": "*"
 }
