--- a/src/VeganBigBrother.Infrastructure/VeganBigBrother.Infrastructure.csproj
+++ b/src/VeganBigBrother.Infrastructure/VeganBigBrother.Infrastructure.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\VeganBigBrother.Core\VeganBigBrother.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
